sample/error/eval_nd-member_mem.bfr
codegen [
  $build {
    a: array(3) {}
  } in
  + a:mem
]